--- a/EmployeeAPI/.gitignore
+++ b/EmployeeAPI/.gitignore
@@ -22,9 +22,9 @@ packages/
 Migrations/
 
 # App settings
-appsettings.json
-appsettings.Development.json
-appsettings.Production.json
+# appsettings.json
+# appsettings.Development.json
+# appsettings.Production.json
 
 # Database files
 *.mdf
